zsh: add some key binding

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "zsh/.config/zsh.d/plugins/zsh-edit"]
 	path = zsh/.config/zsh.d/plugins/zsh-edit
 	url = https://github.com/marlonrichert/zsh-edit.git
+[submodule "zsh/.config/zsh.d/plugins/zsh-smartcache"]
+	path = zsh/.config/zsh.d/plugins/zsh-smartcache
+	url = https://github.com/QuarticCat/zsh-smartcache.git
+[submodule "zsh/.config/zsh.d/plugins/fzf-tab"]
+	path = zsh/.config/zsh.d/plugins/fzf-tab
+	url = https://github.com/Aloxaf/fzf-tab.git
