--- a/weechat/.weechat/irc.conf
+++ b/weechat/.weechat/irc.conf
@@ -32,6 +32,7 @@ display_join_message = "329,332,333,366"
 display_old_topic = on
 display_pv_away_once = on
 display_pv_back = on
+display_pv_nick_change = on
 display_pv_warning_address = off
 highlight_channel = "$nick"
 highlight_pv = "$nick"
@@ -68,6 +69,7 @@ smart_filter_join_unmask = 30
 smart_filter_mode = "+"
 smart_filter_nick = on
 smart_filter_quit = on
+smart_filter_setname = on
 temporary_servers = off
 topic_strip_colors = off
 typing_status_nicks = off
@@ -87,6 +89,7 @@ message_chghost = brown
 message_join = green
 message_kick = red
 message_quit = red
+message_setname = brown
 mirc_remap = "1,-1:darkgray"
 nick_prefixes = "y:lightred;q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
@@ -257,3 +260,48 @@ hackint.notify
 hackint.split_msg_max_length
 hackint.charset_message
 hackint.default_chantypes
+oftc.addresses = "irc.oftc.net/6697"
+oftc.proxy
+oftc.ipv6
+oftc.ssl = on
+oftc.ssl_cert = "%h/certs/oftc.pem"
+oftc.ssl_password
+oftc.ssl_priorities
+oftc.ssl_dhkey_size
+oftc.ssl_fingerprint
+oftc.ssl_verify = on
+oftc.password
+oftc.capabilities
+oftc.sasl_mechanism
+oftc.sasl_username = ""
+oftc.sasl_password = ""
+oftc.sasl_key
+oftc.sasl_timeout
+oftc.sasl_fail
+oftc.autoconnect = on
+oftc.autoreconnect
+oftc.autoreconnect_delay
+oftc.nicks = "CoelacanthusHex"
+oftc.nicks_alternate
+oftc.username
+oftc.realname
+oftc.local_hostname
+oftc.usermode
+oftc.command
+oftc.command_delay
+oftc.autojoin
+oftc.autojoin_dynamic
+oftc.autorejoin
+oftc.autorejoin_delay
+oftc.connection_timeout
+oftc.anti_flood_prio_high
+oftc.anti_flood_prio_low
+oftc.away_check
+oftc.away_check_max_nicks
+oftc.msg_kick
+oftc.msg_part
+oftc.msg_quit
+oftc.notify
+oftc.split_msg_max_length
+oftc.charset_message
+oftc.default_chantypes
