ssh: add archlinux gitlab config

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -14,6 +14,16 @@ Host github.com
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
 
+Host gitlab.archlinux.org
+    User git
+    Port 222
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    ProxyUseFdpass yes
+    # socks5 proxy
+    #ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
+    # http proxy
+    #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
+
 Host codereview.qt-project.org
     Port 29418
     User coelacanthus
