--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -90,6 +90,15 @@
       <string>dlig off</string>
     </edit>
   </match>
+  <!-- Zhudou Sans -->
+  <match target="scan">
+    <test name="family" qual="any">
+      <string>Zhudou Sans</string>
+    </test>
+    <edit name="fontfeatures" mode="append">
+      <string>chws on</string> <!-- 标点挤压 -->
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
