fontconfig: try to update font replacement

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -20,6 +20,7 @@
     <edit binding="strong" mode="prepend" name="family">
       <string>Andika</string>
       <string>Roboto</string>
+      <string>Zhudou Sans</string>
       <string>Noto Sans CJK SC</string>
       <string>Noto Sans CJK TC</string>
       <string>Noto Sans CJK JP</string>
@@ -51,6 +52,7 @@
         <string>Zilla Slab</string>
       -->
       <string>Roboto Slab</string>
+      <string>Zhudou Sans</string>
       <string>Noto Serif CJK SC</string>
       <string>Noto Serif CJK TC</string>
       <string>Noto Serif CJK JP</string>
