git,makepkg: update email

--- a/pacman/.config/pacman/makepkg.conf
+++ b/pacman/.config/pacman/makepkg.conf
@@ -61,7 +61,7 @@ OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge debug lto)
 #-- File integrity checks to use. Valid: md5, sha1, sha224, sha256, sha384, sha512, b2
 INTEGRITY_CHECK=(b2)
 
-PACKAGER="Coelacanthus <coelacanthus@outlook.com>"
+PACKAGER="Coelacanthus <CoelacanthusHex@gmail.com>"
 GPGKEY="E35C89E45867AE35"
 
 #########################################################################
