--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -2,47 +2,51 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <!-- Configs based on https://github.com/rocka/dotFiles/blob/master/.config/fontconfig/conf.d/10-replace.conf -->
 <!-- Configs based on https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf -->
-<!-- Configs based on https://szclsya.me/zh-cn/posts/fonts/linux-config-guide/>
 <fontconfig>
   <!-- 无衬线字体 -->
   <match target="pattern">
     <test name="family">
       <string>-apple-system</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>Arial</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>Helvetica</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>Segoe UI</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>Liberation</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
     </edit>
   </match>
   <match target="pattern">
@@ -52,40 +56,48 @@
     <test name="family" compare="contains">
       <string>WenQuanYi</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family" compare="contains">
       <string>Microsoft YaHei</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>微软雅黑</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>SimHei</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Andika</string>
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>黑体</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>sans-serif</string>
+    <edit name="family" binding="same">
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
   <!-- 等宽字体 -->
@@ -93,32 +105,27 @@
     <test name="family">
       <string>Consolas</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>monospace</string>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family">
       <string>Liberation Mono</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Courier</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>monospace</string>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
     </edit>
   </match>
   <match target="pattern">
     <test name="family" compare="contains">
       <string>courier</string>
     </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>monospace</string>
+    <test name="family" compare="contains">
+      <string>Courier</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
     </edit>
   </match>
   <!-- Emoji -->
@@ -128,7 +135,7 @@
       <string>Apple Color Emoji</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>emoji</string>
+      <string>Twemoji</string>
     </edit>
   </match>
   <!-- 替换 Noto Color Emoji 字体。 -->
@@ -137,7 +144,7 @@
       <string>Noto Color Emoji</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>emoji</string>
+      <string>Twemoji</string>
     </edit>
   </match>
 </fontconfig>
