--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -24,11 +24,11 @@
       <string>Noto Sans CJK TC</string>
       <string>Noto Sans CJK JP</string>
       <string>Noto Sans CJK KR</string>
-      <!--<string>Noto Sans</string>-->
       <!--补全生僻字-->
-      <string>Plangothic Release</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
+      <string>NazonoMincho</string>
+      <string>NazonoMincho+</string>
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
@@ -55,11 +55,11 @@
       <string>Noto Serif CJK TC</string>
       <string>Noto Serif CJK JP</string>
       <string>Noto Serif CJK KR</string>
-      <!--<string>Noto Serif</string>-->
       <!--补全生僻字-->
+      <string>NazonoMincho</string>
+      <string>NazonoMincho+</string>
       <string>HanaMinA</string>
       <string>HanaMinB</string>
-      <string>Plangothic Release</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>Twemoji</string>
@@ -87,9 +87,10 @@
       <string>Sarasa Term J</string>
       <!--string>Symbols Nerd Font</string-->
       <!--补全生僻字-->
-      <string>Plangothic Release</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
+      <string>NazonoMincho</string>
+      <string>NazonoMincho+</string>
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
