--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -21,6 +21,10 @@
       <family>Plangothic P1</family>
       <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
       <family>Plangothic P2</family>
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝 -->
+      <family>NazonoMincho</family>
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
       <!-- 拉让文：ꥃ -->
@@ -57,6 +61,10 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝 -->
+      <family>NazonoMincho</family>
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 C：𫚥 -->
       <family>HanaMinB</family>
       <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
@@ -101,6 +109,10 @@
       <family>Plangothic P1</family>
       <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
       <family>Plangothic P2</family>
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝 -->
+      <family>NazonoMincho</family>
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
       <!-- 拉让文：ꥃ -->
