fontconfig: add replace for Inconsolata

--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -118,11 +118,24 @@
     </edit>
   </match>
   <match target="pattern">
-    <test name="family" compare="contains">
-      <string>courier</string>
+    <test name="family">
+      <string>Inconsolata</string>
     </test>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
+    </edit>
+  </match>
+  <match target="pattern">
     <test name="family" compare="contains">
       <string>Courier</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>Iosevka</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" compare="contains">
+      <string>courier</string>
     </test>
     <edit name="family" binding="same">
       <string>Iosevka</string>
