fontconfig: prefer CHECK MARK of Noto Sans CJK

--- a/fontconfig/.config/fontconfig/conf.d/48-replace-charset.conf
+++ b/fontconfig/.config/fontconfig/conf.d/48-replace-charset.conf
@@ -3,24 +3,67 @@
 <fontconfig>
   <description>Replace some chars in special font.</description>
   <!--
-  If some fonts contain emoji glyphs, they could interfere and make some emojis rendered in wrong font (often in black-and-white).
+    If some fonts contain emoji glyphs, they could interfere and make some emojis rendered in wrong font (often in black-and-white).
   -->
   <match target="scan">
-      <test name="family" compare="contains">
-          <string>DejaVu</string>
-      </test>
-      <edit name="charset" mode="assign" binding="same">
-          <minus>
-              <name>charset</name>
-              <charset>
-                  <range>
-                      <int>0x1f600</int>
-                      <int>0x1f640</int>
-                  </range>
-              </charset>
-          </minus>
-      </edit>
+    <test name="family" compare="contains">
+      <string>DejaVu</string>
+    </test>
+    <edit name="charset" mode="assign" binding="same">
+      <minus>
+        <name>charset</name>
+        <charset>
+          <range>
+            <int>0x1F600</int>
+            <int>0x1F640</int>
+          </range>
+        </charset>
+      </minus>
+    </edit>
   </match>
+  <!--
+    I prefer CHECK MARK of Noto Sans CJK
+  -->
+  <match target="scan">
+    <test name="family" compare="not_contains">
+      <string>Noto Sans CJK</string>
+    </test>
+    <edit name="charset" mode="assign" binding="same">
+      <minus>
+        <name>charset</name>
+        <charset>
+          <int>0x2713</int>
+        </charset>
+      </minus>
+    </edit>
+  </match>
+  <!--
+    Blacklist private range codepoints from non-icon fonts
+  -->
+  <!--
+  <match target="scan">
+    <test name="family" compare="not_contains">
+      <string>Nerd</string>
+    </test>
+    <test name="family" compare="not_contains">
+      <string>Font Awesome</string>
+    </test>
+    <test name="family" compare="not_contains">
+      <string>FontAwesome</string>
+    </test>
+    <edit name="charset" mode="assign">
+      <minus>
+        <name>charset</name>
+        <charset>
+          <range>
+            <int>0xE000</int>
+            <int>0xF8FF</int>
+          </range>
+        </charset>
+      </minus>
+    </edit>
+  </match>
+  -->
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; syntax xml; -->
