gpg: enable pcsc-shared

--- a/gpg/.gnupg/scdaemon.conf
+++ b/gpg/.gnupg/scdaemon.conf
@@ -1,3 +1,6 @@
-pcsc-driver /usr/lib/libpcsclite.so
+# It seems default?
+pcsc-driver libpcsclite.so
+# FIXME: Have a try
+pcsc-shared
 card-timeout 5
 disable-ccid
