fontconfig: remove replace for WenQuanYi

--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -17,13 +17,13 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>Plangothic P1</family>
-      <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
+      <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>Plangothic P2</family>
-      <!-- 中日韩统一表意文字扩展 AGH：𰻝 -->
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>NazonoMincho</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
@@ -61,15 +61,15 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 AGH：𰻝 -->
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>NazonoMincho</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 C：𫚥 -->
       <family>HanaMinB</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>Plangothic P1</family>
-      <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
+      <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>Plangothic P2</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
@@ -105,13 +105,13 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>Plangothic P1</family>
-      <!-- 中日韩统一表意文字扩展 GH：𰻝 -->
+      <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀-->
       <family>Plangothic P2</family>
-      <!-- 中日韩统一表意文字扩展 AGH：𰻝 -->
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>NazonoMincho</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥 -->
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 fallback-->
       <family>HanaMinB</family>
