env: move go mod cache to xdg

--- a/envvars/.config/environment.d/01-xdg-fix.conf
+++ b/envvars/.config/environment.d/01-xdg-fix.conf
@@ -9,6 +9,7 @@ CUDA_CACHE_PATH="$XDG_CACHE_HOME"/nv
 BASH_COMPLETION_USER_FILE="$XDG_CONFIG_HOME"/bash-completion/bash_completion
 # Go
 GOPATH="$XDG_DATA_HOME"/go
+GOMODCACHE="$XDG_CACHE_HOME"/go/mod
 # GTK2
 GTK2_RC_FILES="$XDG_CONFIG_HOME"/gtk-2.0/gtkrc
 # Java
