tmux: rmeove fcitx5-remote temporally

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g mouse on
 #   else if pane is in copy mode, send the mouse event,  
 #   else put the current pane into copy mode and send the mouse event.  
 # Nested ifs are not fun.  
-bind -n WheelUpPane if-shell -Ft= "#{mouse_any_flag}" "send-keys -M" "if-shell -Ft= '#{alternate_on}' 'send-keys -t= up' 'if-shell -Ft= \"#{pane_in_mode}\" \"send-keys -M\" \"run fcitx5-remote\\\\ -c; select-pane -t=; copy-mode -e; send-keys -M\"'"
+bind -n WheelUpPane if-shell -Ft= "#{mouse_any_flag}" "send-keys -M" "if-shell -Ft= '#{alternate_on}' 'send-keys -t= up' 'if-shell -Ft= \"#{pane_in_mode}\" \"send-keys -M\" \"select-pane -t=; copy-mode -e; send-keys -M\"'"
 # On a wheeldown event, if we're in an alternate screen program, send the down  
 # key, else, just send the mouse event  
 bind -n WheelDownPane if-shell -Ft= "#{alternate_on}" "send-keys -t= down" "select-pane -t= \; send-keys -M"
