ssh: set jump server for archlinuxcn

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -40,6 +40,7 @@ Host archlinuxcn
     User coelacanthus
     Hostname build.archlinuxcn.org
     IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    ProxyJump tky1.jp.node.dn42
 
 Match all
     ControlMaster auto
