git: add termux config
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -80,4 +80,8 @@
 [includeIf "gitdir:~/project/archlinuxcn/**"]
     path = ~/.config/git/archlinuxcn.config
 
+# Platform specific configs
+[includeIf "gitdir:/data/data/com.termux/files/home/**"]
+    path = ~/.config/git/platform/termux.config
+
 # kate: space-indent on; indent-width 4; syntax toml;
