fontconfig: clean up font config
- use Twemoji Mozilla (COLRv1) instead of Twemoji (SVG)
- use Source Han intead of Noto CJK, for better locale detect
- remove Sarasa Gothic, use Iosevka and Source Hans instead
- remove useless fonts
- only replace Microsoft YaHei in browser

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/45-setting.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-setting.conf
@@ -79,6 +79,34 @@
    <bool>false</bool>
   </edit>
  </match>
+ <match target="pattern">
+   <test qual="any" name="family">
+     <string>微软雅黑</string>
+   </test>
+   <edit name="hinting" mode="assign">
+     <bool>false</bool>
+   </edit>
+   <edit name="hintstyle" mode="assign">
+     <const>hintnone</const>
+   </edit>
+   <edit name="autohint" mode="assign">
+     <bool>true</bool>
+   </edit>
+ </match>
+ <match target="pattern">
+   <test qual="any" name="family">
+     <string>Microsoft YaHei</string>
+   </test>
+   <edit name="hinting" mode="assign">
+     <bool>false</bool>
+   </edit>
+   <edit name="hintstyle" mode="assign">
+     <const>hintnone</const>
+   </edit>
+   <edit name="autohint" mode="assign">
+     <bool>true</bool>
+   </edit>
+ </match>
  <dir>~/.fonts</dir>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
