--- a/fontconfig/.config/fontconfig/conf.d/48-replace-charset.conf
+++ b/fontconfig/.config/fontconfig/conf.d/48-replace-charset.conf
@@ -25,11 +25,11 @@
     </edit>
   </match>
   <!--
-    I prefer CHECK MARK of Noto Sans CJK
+    I prefer CHECK MARK of Source Han Sans
   -->
   <match target="scan">
     <test name="family" compare="not_contains">
-      <string>Noto Sans CJK</string>
+      <string>Source Han Sans</string>
     </test>
     <edit name="charset" mode="assign" binding="same">
       <minus>
