--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -2,15 +2,6 @@
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <!-- Configs based on https://sh.alynx.one/posts/Fontconfig-NotoColorEmoji-Antialias/local.conf -->
 <fontconfig>
-  <!-- Default system-ui fonts -->
-  <match target="pattern">
-    <test name="family">
-      <string>system-ui</string>
-    </test>
-    <edit name="family" mode="prepend" binding="strong">
-      <string>sans-serif</string>
-    </edit>
-  </match>
   <!-- 默认无衬线字体 -->
   <!-- Default sans-serif font -->
   <match target="pattern">
@@ -19,22 +10,16 @@
     </test>
     <edit binding="strong" mode="prepend" name="family">
       <string>Andika</string>
+      <string>Lato</string>
       <string>Roboto</string>
-      <string>Noto Sans CJK SC</string>
-      <string>Noto Sans CJK TC</string>
-      <string>Noto Sans CJK JP</string>
-      <string>Noto Sans CJK KR</string>
+      <string>Source Han Sans</string>
       <!--补全生僻字-->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
-      <string>HanaMinA</string>
-      <string>HanaMinB</string>
-      <string>Twemoji</string>
-      <string>Twitter Color Emoji</string>
+      <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
-      <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
     </edit>
@@ -46,28 +31,16 @@
       <string>serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <!--
-         Its number jump up and down, so disable it
-        <string>Zilla Slab</string>
-      -->
       <string>Roboto Slab</string>
-      <string>Noto Serif CJK SC</string>
-      <string>Noto Serif CJK TC</string>
-      <string>Noto Serif CJK JP</string>
-      <string>Noto Serif CJK KR</string>
+      <string>Source Han Serif</string>
       <!--补全生僻字-->
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
-      <string>HanaMinA</string>
-      <string>HanaMinB</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
-      <string>Twemoji</string>
-      <string>Twitter Color Emoji</string>
+      <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
-      <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
     </edit>
   </match>
   <!-- 默认等宽字体 -->
@@ -80,25 +53,17 @@
       <!-- We don't replace it with Iosevka because Firefox and Qt don't support OpenType feature, so I can't use ss10 variant -->
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
+      <string>Maple Mono</string>
       <string>Fira Code</string>
-      <string>Monaco</string>
-      <string>Sarasa Term SC</string>
-      <string>Sarasa Term TC</string>
-      <string>Sarasa Term J</string>
-      <!--string>Symbols Nerd Font</string-->
+      <string>Source Han Sans</string>
       <!--补全生僻字-->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
-      <string>HanaMinA</string>
-      <string>HanaMinB</string>
-      <string>Twemoji</string>
-      <string>Twitter Color Emoji</string>
+      <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
-      <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
     </edit>
   </match>
   <match target="pattern">
@@ -106,22 +71,9 @@
       <string>emoji</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <!--
-          Twemoji Color Emoji use SVGinOpenType,
-          it is only supported by Firefox.
-          So I using twemoji from Fedora, but it don't use SVG.
-          https://wiki.archlinux.org/title/Fonts#Emoji_and_symbols
-      
-          If FreeType support it, this problem will be solved.
-          https://savannah.nongnu.org/bugs/?46141
-          FreeType support it now.
-      -->
-      <string>Twitter Color Emoji</string>
-      <string>Twemoji</string>
+      <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
-      <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
-      <string>Noto Emoji</string>
     </edit>
   </match>
 </fontconfig>
