--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -6,15 +6,6 @@
   <!-- 无衬线字体 -->
   <match target="pattern">
     <test name="family">
-      <string>-apple-system</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
       <string>Arial</string>
     </test>
     <edit name="family" binding="same">
@@ -49,26 +40,31 @@
       <string>Roboto</string>
     </edit>
   </match>
+  <!-- 微软雅黑 {{{1 -->
+  <!-- Web pages tend to use this font, but it displays badly. -->
   <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Microsoft YaHei</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-      <string>Noto Sans CJK SC</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
+    <test qual="any" name="family">
       <string>微软雅黑</string>
     </test>
-    <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
-      <string>Noto Sans CJK SC</string>
+    <test name="prgname" compare="eq">
+      <string>Firefox</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Source Han Sans</string>
     </edit>
   </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>Microsoft YaHei</string>
+    </test>
+    <test name="prgname" compare="eq">
+      <string>Firefox</string>
+    </test>
+    <edit name="family" mode="prepend" binding="strong">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <!-- 1}}} -->
   <match target="pattern">
     <test name="family">
       <string>SimHei</string>
@@ -76,7 +72,7 @@
     <edit name="family" binding="same">
       <string>Andika</string>
       <string>Roboto</string>
-      <string>Noto Sans CJK SC</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -84,7 +80,7 @@
       <string>黑体</string>
     </test>
     <edit name="family" binding="same">
-      <string>Noto Sans CJK SC</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <!-- 等宽字体 -->
@@ -135,7 +131,7 @@
       <string>Apple Color Emoji</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Twemoji</string>
+      <string>Twemoji Mozilla</string>
     </edit>
   </match>
   <!-- 替换 Noto Color Emoji 字体。 -->
@@ -144,7 +140,7 @@
       <string>Noto Color Emoji</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Twemoji</string>
+      <string>Twemoji Mozilla</string>
     </edit>
   </match>
 </fontconfig>
