fontconfig: change back to Twemoji (Bitmap)
Because Qt and GTK has problem.

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -18,6 +18,7 @@
       <string>Plangothic P2</string>
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
+      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
@@ -38,6 +39,7 @@
       <string>NazonoMincho+</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
+      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
@@ -61,6 +63,7 @@
       <string>Plangothic P2</string>
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
+      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
@@ -71,6 +74,10 @@
       <string>emoji</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
+      <!--
+        Use bitmap Twemoji font for Qt and GTK seems no support for COLRv1.
+      -->
+      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
       <string>Noto Color Emoji</string>
