--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -131,6 +131,7 @@
       <string>Apple Color Emoji</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
     </edit>
   </match>
@@ -140,6 +141,7 @@
       <string>Noto Color Emoji</string>
     </test>
     <edit name="family" mode="assign" binding="same">
+      <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
     </edit>
   </match>
