--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -3,7 +3,10 @@
 <!-- Configs based on https://github.com/rocka/dotFiles/blob/master/.config/fontconfig/conf.d/10-replace.conf -->
 <!-- Configs based on https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf -->
 <fontconfig>
+  <description>使用思源字体取代一些我不想使用的字体。</description>
+
   <!-- 无衬线字体 -->
+  <!-- 西文字体 {{{ -->
   <match target="pattern">
     <test name="family">
       <string>Arial</string>
@@ -40,7 +43,8 @@
       <string>Roboto</string>
     </edit>
   </match>
-  <!-- 微软雅黑 {{{1 -->
+  <!-- }}} -->
+  <!-- 微软雅黑 {{{ -->
   <!-- Web pages tend to use this font, but it displays badly. -->
   <match target="pattern">
     <test qual="any" name="family">
@@ -64,14 +68,13 @@
       <string>Source Han Sans</string>
     </edit>
   </match>
-  <!-- 1}}} -->
+  <!-- }}} -->
+  <!-- 中易黑体 {{{ -->
   <match target="pattern">
     <test name="family">
       <string>SimHei</string>
     </test>
     <edit name="family" binding="same">
-      <string>Andika</string>
-      <string>Roboto</string>
       <string>Source Han Sans</string>
     </edit>
   </match>
@@ -83,6 +86,202 @@
       <string>Source Han Sans</string>
     </edit>
   </match>
+  <match target="pattern">
+    <test name="family">
+      <string>中易黑体</string>
+    </test>
+    <edit name="family" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <!-- }}} -->
+  <!-- 微软正黑体 {{{ -->
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>微软正黑体</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>Microsoft JhengHei</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <!-- }}} -->
+  <!-- 文泉驿黑体 {{{ -->
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>WenQuanYi Zen Hei</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>文泉驿正黑</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>WenQuanYi Micro Hei</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>文泉驿微米黑</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>WenQuanYi Micro Hei Light</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans</string>
+    </edit>
+  </match>
+  <!-- }}} -->
+  <!-- 衬线字体 -->
+  <!-- 中易宋体 {{{ -->
+  <match target="pattern">
+    <test name="family">
+      <string>宋体</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>新宋体</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>宋体-18030</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>新宋体-18030</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>SimSun</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>NSimSun</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>SimSun-18030</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>NSimSun-18030</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>SimSun-ExtB</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <!-- }}} -->
+  <!-- 细明体 {{{ -->
+  <match target="pattern">
+    <test name="family">
+      <string>新細明體</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>細明體</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>PMingLiU</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>MingLiU</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
+      <string>细明体-ExtB</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <!-- }}} -->
+  <!-- 文泉驿宋体 {{{ -->
+  <match target="pattern">
+    <test name="family">
+      <string>WenQuanYi Bitmap Song</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Source Han Serif</string>
+    </edit>
+  </match>
+  <!-- }}} -->
   <!-- 等宽字体 -->
   <match target="pattern">
     <test name="family">
@@ -125,7 +324,7 @@
     </edit>
   </match>
   <!-- Emoji -->
-  <!-- 替换 Apple Color Emoji 字体。 -->
+  <!-- Apple Color Emoji {{{ -->
   <match target="pattern">
     <test name="family" qual="any">
       <string>Apple Color Emoji</string>
@@ -135,7 +334,8 @@
       <string>Twemoji Mozilla</string>
     </edit>
   </match>
-  <!-- 替换 Noto Color Emoji 字体。 -->
+  <!-- }}} -->
+  <!-- Noto Color Emoji {{{ -->
   <match target="pattern">
     <test name="family" qual="any">
       <string>Noto Color Emoji</string>
@@ -145,6 +345,7 @@
       <string>Twemoji Mozilla</string>
     </edit>
   </match>
+  <!-- }}} -->
 </fontconfig>
-<!-- vim: set nu sts=2 sw=2 et: -->
+<!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; -->
