fontconfig: map SimSun series font to sans font
Windows use these fonts as UI font before.

Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/51-replace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/51-replace.conf
@@ -157,12 +157,16 @@
   <!-- }}} -->
   <!-- 衬线字体 -->
   <!-- 中易宋体 {{{ -->
+  <!--
+    FIXME: Windows use a serif as UI font before.
+    So I must map these serif fonts to a sans font.
+    -->
   <match target="pattern">
     <test name="family">
       <string>宋体</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -170,7 +174,7 @@
       <string>新宋体</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -178,7 +182,7 @@
       <string>宋体-18030</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -186,7 +190,7 @@
       <string>新宋体-18030</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -194,7 +198,7 @@
       <string>SimSun</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -202,7 +206,7 @@
       <string>NSimSun</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -210,7 +214,7 @@
       <string>SimSun-18030</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -218,7 +222,7 @@
       <string>NSimSun-18030</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <match target="pattern">
@@ -226,7 +230,7 @@
       <string>SimSun-ExtB</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Source Han Serif</string>
+      <string>Source Han Sans</string>
     </edit>
   </match>
   <!-- }}} -->
