fontconfig: Hack for website with en-* but contain CJK characters
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-replace-noto-cjk-with-source-han.conf
@@ -3,6 +3,30 @@
 <fontconfig>
   <description>使用思源字体取代 Noto CJK 以在不同语言下自动采用不同的汉字变体。</description>
 
+  <!-- Hack for website with en-* but contain CJK char -->
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>en</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Sans</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Sans SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="lang" compare="contains">
+      <string>en</string>
+    </test>
+    <test qual="any" name="family">
+      <string>Source Han Serif</string>
+    </test>
+    <edit name="family" mode="assign" binding="same">
+      <string>Source Han Serif SC</string>
+    </edit>
+  </match>
+
   <match target="pattern">
     <test qual="any" name="family">
       <string>Noto Sans CJK SC</string>
