fontconfig: add FangSong and KaiTi replacement
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/45-setting.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-setting.conf
@@ -5,27 +5,27 @@
   <match target="scan">
     <!-- 抗锯齿 -->
     <!-- 抗锯齿. 除非你的屏幕DPI奇高否则建议开启. -->
-    <edit mode="assign" name="antialias">
+    <edit name="antialias" mode="assign">
       <bool>true</bool>
     </edit>
     <!-- 字体提示 -->
     <!-- BCI (字节码解释器) -->
-    <edit mode="assign" name="hinting">
+    <edit name="hinting" mode="assign">
       <bool>true</bool>
     </edit>
     <!-- 自动微调 -->
-    <edit mode="assign" name="autohint">
+    <edit name="autohint" mode="assign">
       <bool>false</bool>
     </edit>
     <!-- Hintstyle -->
     <!-- 字体微调的程度, 可选为 hintnone, hintslight, hintmedium, hintfull. -->
     <!-- 简单来说，更高的 hinting 等级可以使字体更锐利，但同时也会损失更多的细节. -->
-    <edit mode="assign" name="hintstyle">
+    <edit name="hintstyle" mode="assign">
       <const>hintslight</const>
     </edit>
     <!-- 像素对齐 -->
     <!-- 显示器使用的像素排列方式. 现代显示器基本都是用rgb排列. -->
-    <edit mode="assign" name="rgba">
+    <edit name="rgba" mode="assign">
       <const>rgb</const>
     </edit>
     <!-- 亚像素渲染风格：lcdlight表示优先减轻笔画模糊程度，lcddefault表示优先消除彩色边纹 -->
@@ -43,44 +43,44 @@
   </match>
   <!-- Twemoji 不支持关闭内嵌点阵 -->
   <match target="scan">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>Twemoji</string>
     </test>
-    <edit mode="assign" name="embeddedbitmap">
+    <edit name="embeddedbitmap" mode="assign">
       <bool>true</bool>
     </edit>
   </match>
   <!-- Noto Color Emoji 不支持开启抗锯齿和微调，所以在全局开启之后还得给它关掉。 -->
   <match target="scan">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>Noto Color Emoji</string>
     </test>
-    <edit mode="assign" name="scalable">
+    <edit name="scalable" mode="assign">
       <bool>true</bool>
     </edit>
-    <edit mode="assign" name="embeddedbitmap">
+    <edit name="embeddedbitmap" mode="assign">
       <bool>true</bool>
     </edit>
-    <edit mode="assign" name="hinting">
+    <edit name="hinting" mode="assign">
       <bool>false</bool>
     </edit>
-    <edit mode="assign" name="antialias">
+    <edit name="antialias" mode="assign">
       <bool>false</bool>
     </edit>
   </match>
   <match target="scan">
-    <test compare="contains" qual="any" name="family">
+    <test name="family" qual="any" compare="contains">
       <string>Sarasa</string>
     </test>
-    <edit mode="assign" name="hinting">
+    <edit name="hinting" mode="assign">
       <bool>false</bool>
     </edit>
-    <edit mode="assign" name="autohint">
+    <edit name="autohint" mode="assign">
       <bool>false</bool>
     </edit>
   </match>
   <match target="pattern">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>微软雅黑</string>
     </test>
     <edit name="hinting" mode="assign">
@@ -94,7 +94,7 @@
     </edit>
   </match>
   <match target="pattern">
-    <test qual="any" name="family">
+    <test name="family" qual="any">
       <string>Microsoft YaHei</string>
     </test>
     <edit name="hinting" mode="assign">
