--- a/aria2/.aria2/aria2.conf
+++ b/aria2/.aria2/aria2.conf
@@ -66,9 +66,9 @@ rpc-secure=false
 # 启用RPC, 默认:false
 enable-rpc=true
 # 允许所有来源, 默认:false
-rpc-allow-origin-all=true
+#rpc-allow-origin-all=true
 # 允许非外部访问, 默认:false
-rpc-listen-all=true
+#rpc-listen-all=true
 # 事件轮询方式, 取值:[epoll, kqueue, port, poll, select], 不同系统默认值不同
 #event-poll=select
 # RPC监听端口, 端口被占用时可以修改, 默认:6800
