paru: sync with upstream

--- a/paru/.config/paru/paru.conf
+++ b/paru/.config/paru/paru.conf
@@ -1,4 +1,5 @@
 #
+# $PARU_CONF
 # /etc/paru.conf
 # ~/.config/paru/paru.conf
 #
@@ -8,25 +9,34 @@
 # GENERAL OPTIONS
 #
 [options]
-#PgpFetch
+PgpFetch
 Devel
 Provides
-DevelSuffixes = -git -cvs -svn -bzr -darcs -always
+DevelSuffixes = -git -cvs -svn -bzr -darcs -always -hg -fossil
+#AurOnly
 BottomUp
 #RemoveMake
 #SudoLoop
 #UseAsk
+#SaveChanges
 #CombinedUpgrade
 #CleanAfter
+#UpgradeMenu
+#NewsOnUpgrade
+
 LocalRepo = aurlocalrepo
 Chroot
-BatchInstall
+#Sign
+#SignDb
+#KeepRepoCache
 
 #
 # Binary OPTIONS
 #
 #[bin]
-#FileManager = vifm
+#FileManager = lf
+#MFlags = --skippgpcheck
+#Sudo = doas
 
 # vim: set ft=toml:
 # kate: space-indent on; indent-width 4; syntax toml;
